--- a/src/main/resources/templates/commodities.html
+++ b/src/main/resources/templates/commodities.html
@@ -208,6 +208,23 @@
     </div>
     <a href="#" class="btn btn-primary border-3 border-primary rounded-circle back-to-top"><i class="fa fa-arrow-up"></i></a>
 
+
+<!-- State Popup Modal -->
+<div class="modal fade" id="stateModal" tabindex="-1">
+    <div class="modal-dialog modal-dialog-centered">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h5 class="modal-title" id="modalCommodityName"></h5>
+                <button type="button" class="btn-close" data-bs-dismiss="modal"></button>
+            </div>
+            <div class="modal-body">
+                <ul id="stateList" class="list-group"></ul>
+            </div>
+        </div>
+    </div>
+</div>
+
+
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.4/jquery.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0/dist/js/bootstrap.bundle.min.js"></script>
     <script src="lib/easing/easing.min.js"></script>
@@ -238,7 +255,35 @@
                 }
             });
         });
+
     </script>
 
+<script>
+    function openStatePopup(element) {
+    const commodityName = element.dataset.name;
+    document.getElementById("modalCommodityName").textContent = commodityName;
+
+    const API_URL = "/api/states/" + commodityName; // <-- backend API endpoint
+
+    fetch(API_URL)
+        .then(res => res.json())
+        .then(states => {
+            const list = document.getElementById("stateList");
+            list.innerHTML = ""; 
+
+            states.forEach(state => {
+                const li = document.createElement("li");
+                li.className = "list-group-item";
+                li.textContent = state;
+                list.appendChild(li);
+            });
+
+            const modal = new bootstrap.Modal(document.getElementById('stateModal'));
+            modal.show();
+        })
+        .catch(err => console.error("Error fetching states:", err));
+}
+
+</script>
 </body>
 </html>
