--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -57,7 +57,8 @@
                     </button>
                     <div class="collapse navbar-collapse bg-white" id="navbarCollapse">
                         <div class="navbar-nav mx-auto">
-                            <a href="index.html" class="nav-item nav-link active">Home</a>
+                            <a th:href="@{/}" class="nav-item nav-link active">Home</a>
+                            <a href="#" class="nav-item nav-link">About</a>
                             <a th:href="@{/market}" class="nav-item nav-link">Market</a>
                             <a th:href="@{/login}" class="nav-item nav-link">Login</a>
                             <a href="contact.html" class="nav-item nav-link">Contact</a>
