--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -82,12 +82,13 @@
           <span class="fa fa-bars text-primary"></span>
         </button>
         <div class="collapse navbar-collapse bg-white" id="navbarCollapse">
-          <div class="navbar-nav mx-auto">
-            <a th:href="@{/}" class="nav-item nav-link">Home</a>
-            <a href="prices.html" class="nav-item nav-link active">Login</a>
-            <a href="shop-detail.html" class="nav-item nav-link">Shop Detail</a>
-            <a href="contact.html" class="nav-item nav-link">Contact</a>
-          </div>
+           <div class="navbar-nav mx-auto">
+                            <a th:href="@{/}" class="nav-item nav-link">Home</a>
+                            <a href="#" class="nav-item nav-link">About</a>
+                            <a th:href="@{/market}" class="nav-item nav-link">Market</a>
+                            <a th:href="@{/login}" class="nav-item nav-link active">Login</a>
+                            <a href="contact.html" class="nav-item nav-link">Contact</a>
+                        </div>
           <div class="d-flex m-3 me-0">
             <a th:href="@{/login}" class="my-auto">
               <i class="fas fa-user fa-2x"></i>
@@ -152,13 +153,7 @@
             <div class="container">
                 <div class="row">
                     <div class="col-md-6 text-center text-md-start mb-3 mb-md-0">
-                        <span class="text-light"><a href="#"><i class="fas fa-copyright text-light me-2"></i>Your Site Name</a>, All right reserved.</span>
-                    </div>
-                    <div class="col-md-6 my-auto text-center text-md-end text-white">
-                        <!--/*** This template is free as long as you keep the below author’s credit link/attribution link/backlink. ***/-->
-                        <!--/*** If you'd like to use the template without the below author’s credit link/attribution link/backlink, ***/-->
-                        <!--/*** you can purchase the Credit Removal License from "https://htmlcodex.com/credit-removal". ***/-->
-                        Designed By <a class="border-bottom" href="#">HTML Codex</a> Distributed By <a class="border-bottom" href="https://themewagon.com">ThemeWagon</a>
+                        <span class="text-light"><a href="#"><i class="fas fa-copyright text-light me-2"></i>Agrolive</a>, All right reserved.</span>
                     </div>
                 </div>
             </div>
