--- a/src/main/resources/templates/register.html
+++ b/src/main/resources/templates/register.html
@@ -79,21 +79,13 @@
           <span class="fa fa-bars text-primary"></span>
         </button>
         <div class="collapse navbar-collapse bg-white" id="navbarCollapse">
-          <div class="navbar-nav mx-auto">
-            <a th:href="@{/}" class="nav-item nav-link">Home</a>
-            <a th:href="@{/login}" class="nav-item nav-link active">Login</a>
-            <a href="shop-detail.html" class="nav-item nav-link">Shop Detail</a>
-            <div class="nav-item dropdown">
-              <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown">Pages</a>
-              <div class="dropdown-menu m-0 bg-secondary rounded-0">
-                <a href="cart.html" class="dropdown-item">Cart</a>
-                <a href="chackout.html" class="dropdown-item">Checkout</a>
-                <a href="testimonial.html" class="dropdown-item">Testimonial</a>
-                <a href="404.html" class="dropdown-item">404 Page</a>
-              </div>
-            </div>
-            <a href="contact.html" class="nav-item nav-link">Contact</a>
-          </div>
+           <div class="navbar-nav mx-auto">
+                            <a th:href="@{/}" class="nav-item nav-link ">Home</a>
+                            <a href="#" class="nav-item nav-link">About</a>
+                            <a th:href="@{/market}" class="nav-item nav-link">Market</a>
+                            <a th:href="@{/login}" class="nav-item nav-link active">Login</a>
+                            <a href="contact.html" class="nav-item nav-link">Contact</a>
+                        </div>
           <div class="d-flex m-3 me-0">
             <a href="login.html" class="my-auto">
               <i class="fas fa-user fa-2x"></i>
@@ -166,14 +158,14 @@
                         <span class="text-light"><a href="#"><i class="fas fa-copyright text-light me-2"></i>Agrolive</a>, All right reserved.</span>
                     </div>
                     <div class="col-md-6 my-auto text-center text-md-end text-white">
-                        <!--/*** This template is free as long as you keep the below author’s credit link/attribution link/backlink. ***/-->
-                        <!--/*** If you'd like to use the template without the below author’s credit link/attribution link/backlink, ***/-->
+                        /*** This template is free as long as you keep the below author’s credit link/attribution link/backlink. ***/
+                        /*** If you'd like to use the template without the below author’s credit link/attribution link/backlink, ***/-->
                         <!--/*** you can purchase the Credit Removal License from "https://htmlcodex.com/credit-removal". ***/-->
                         Designed By <a class="border-bottom" href="#">HTML Codex</a> Distributed By <a class="border-bottom" href="https://themewagon.com">ThemeWagon</a>
                     </div>
                 </div>
             </div>
-        </div> -->
+        </div>
         <!-- Copyright End -->
 
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0/dist/js/bootstrap.bundle.min.js"></script>
