--- a/src/main/resources/templates/market.html
+++ b/src/main/resources/templates/market.html
@@ -23,11 +23,25 @@
     <link href="css/style.css" rel="stylesheet">
 
     <style>
+        body, html {
+            height: 100%;
+            margin: 0;
+        }
+
+        .page-wrapper {
+            min-height: 100%;
+            display: flex;
+            flex-direction: column;
+        }
+
+        .content-wrapper {
+            flex: 1; /* take remaining space above footer */
+        }
+
         .fruite-img img {
             height: 150px;
             object-fit: cover;
         }
-
 
         @media (min-width: 992px) {
             .hero-header,
@@ -36,43 +50,41 @@
             }
         }
 
-        .footer {
-            position: fixed;
-            bottom: 0;
-            width: 100%;
-            z-index: 10;
-        }
-
-        .py-4 {
-            padding-bottom: 1.5rem !important;
-        }
-
-        /* Tabs scroll styling (Already present, enforces horizontal display) */
         .nav-pills {
             overflow-x: auto;
             white-space: nowrap;
             scrollbar-width: thin;
-            /* Added for better mobile UX, hides scrollbar on some devices */
-            -ms-overflow-style: none; /* IE and Edge */
-            scrollbar-width: none; /* Firefox */
+            -ms-overflow-style: none;
+            scrollbar-width: none;
         }
+
         .nav-pills::-webkit-scrollbar {
-            display: none; /* Chrome, Safari, Opera*/
+            display: none;
         }
 
         .nav-pills .nav-item {
             display: inline-block;
         }
-        
+
+        .footer {
+            position: relative;
+            width: 100%;
+            background-color: #000;
+            color: #fff;
+            padding: 1rem 0;
+        }
     </style>
 </head>
 
 <body>
+<div class="page-wrapper">
 
+    <!-- Spinner -->
     <div id="spinner" class="show w-100 vh-100 bg-white position-fixed translate-middle top-50 start-50 d-flex align-items-center justify-content-center">
         <div class="spinner-grow text-primary" role="status"></div>
     </div>
-    
+
+    <!-- Navbar -->
     <div class="container-fluid fixed-top">
         <div class="container px-0">
             <nav class="navbar navbar-light bg-white navbar-expand-xl">
@@ -84,12 +96,12 @@
                 </button>
                 <div class="collapse navbar-collapse bg-white" id="navbarCollapse">
                    <div class="navbar-nav mx-auto">
-                            <a th:href="@{/}" class="nav-item nav-link active">Home</a>
-                            <a href="#" class="nav-item nav-link">About</a>
-                            <a th:href="@{/market}" class="nav-item nav-link active">Market</a>
-                            <a th:href="@{/login}" class="nav-item nav-link">Login</a>
-                            <a href="contact.html" class="nav-item nav-link">Contact</a>
-                        </div>
+                        <a th:href="@{/}" class="nav-item nav-link">Home</a>
+                        <a href="#" class="nav-item nav-link">About</a>
+                        <a th:href="@{/market}" class="nav-item nav-link active">Market</a>
+                        <a th:href="@{/login}" class="nav-item nav-link">Login</a>
+                        <a href="contact.html" class="nav-item nav-link">Contact</a>
+                   </div>
                     <div class="d-flex m-3 me-0">
                         <a href="#" class="position-relative me-4 my-auto">
                             <i class="fa fa-shopping-bag fa-2x"></i>
@@ -104,58 +116,85 @@
             </nav>
         </div>
     </div>
-    <div class="container-fluid fruite py-5">
-        <div class="container py-5">
 
-            <div class="tab-class text-center">
-                <div class="row g-4">
+    <!-- Main Content -->
+    <div class="content-wrapper">
+        <div class="container-fluid fruite py-5">
+            <div class="container py-5">
 
-                    <div class="col-lg-4 text-start">
-                        <div class="position-relative mx-auto">
-                            <input id="productSearch" class="form-control border-2 border-secondary w-75 py-3 px-4 rounded-pill"
-                                type="text" placeholder="Search products...">
-                            <button type="submit"
-                                class="btn btn-primary border-2 border-secondary py-3 px-4 position-absolute rounded-pill text-white h-100"
-                                style="top: 0; right: 10%;">Submit Now</button>
+                <div class="tab-class text-center">
+                    <div class="row g-4">
+
+                        <!-- Search Box -->
+                        <div class="col-lg-4 text-start">
+                            <div class="position-relative mx-auto">
+                                <input id="productSearch" class="form-control border-2 border-secondary w-75 py-3 px-4 rounded-pill"
+                                    type="text" placeholder="Search products...">
+                                <button type="submit"
+                                    class="btn btn-primary border-2 border-secondary py-3 px-4 position-absolute rounded-pill text-white h-100"
+                                    style="top: 0; right: 10%;">Submit Now</button>
+                            </div>
                         </div>
-                    </div>
-              
-       <div class="col-lg-8 text-end">
-    <div class="overflow-auto" style="white-space: nowrap;">
-        <ul class="nav nav-pills d-inline-flex text-center flex-nowrap" id="categoryTabs" role="tablist">
 
-            <!-- All Commodities -->
-            <li class="nav-item d-inline-block">
-                <a class="nav-link d-flex m-2 py-2 bg-light rounded-pill active"
-                   data-bs-toggle="pill"
-                   href="#tab-all">
-                    <span class="text-dark" style="width: 130px;">All Commodities</span>
-                </a>
-            </li>
+                        <!-- Categories Tabs -->
+                        <div class="col-lg-8 text-end">
+                            <div class="overflow-auto" style="white-space: nowrap;">
+                                <ul class="nav nav-pills d-inline-flex text-center flex-nowrap" id="categoryTabs" role="tablist">
 
-            <!-- Dynamic Categories -->
+                                    <li class="nav-item d-inline-block">
+                                        <a class="nav-link d-flex m-2 py-2 bg-light rounded-pill active"
+                                           data-bs-toggle="pill"
+                                           href="#tab-all">
+                                            <span class="text-dark" style="width: 130px;">All Commodities</span>
+                                        </a>
+                                    </li>
 
-                            <li class="nav-item d-inline-block" th:each="cat,iterStat : ${categorizedCommodities}">
-                                <a class="nav-link d-flex m-2 py-2 bg-light rounded-pill text-dark"
-                                th:href="'#tab-' + ${iterStat.index}"
-                                data-bs-toggle="pill"
-                                role="tab"
-                                th:text="${cat.key}">
-                                    Category
-                                </a>
-                            </li>
+                                    <li class="nav-item d-inline-block" th:each="cat,iterStat : ${categorizedCommodities}">
+                                        <a class="nav-link d-flex m-2 py-2 bg-light rounded-pill text-dark"
+                                           th:href="'#tab-' + ${iterStat.index}"
+                                           data-bs-toggle="pill"
+                                           role="tab"
+                                           th:text="${cat.key}">Category</a>
+                                    </li>
 
-                        </ul>
-                    </div>
-                </div>
+                                </ul>
+                            </div>
+                        </div>
 
-                <div class="tab-content">
-                    <div class="tab-pane fade show active p-0" id="tab-all" role="tabpanel">
-                        <div class="row g-4">
-                            <div th:each="cat : ${categorizedCommodities}" class="col-12">
-                                <div class="row g-4"> 
+                        <!-- Tab Content -->
+                        <div class="tab-content">
+                            <div class="tab-pane fade show active p-0" id="tab-all" role="tabpanel">
+                                <div class="row g-4">
+                                    <div th:each="cat : ${categorizedCommodities}" class="col-12">
+                                        <div class="row g-4">
+                                            <div th:each="item : ${cat.value}" class="col-6 col-lg-2">
+                                                <div class="rounded position-relative fruite-item text-center"
+                                                     style="cursor:pointer"
+                                                     th:attr="data-name=${item}"
+                                                     onclick="openStatePopup(this)">
+                                                    <div class="fruite-img">
+                                                        <img th:src="@{'img/agroLive.png'}" class="img-fluid rounded-top" alt="" />
+                                                    </div>
+                                                    <div class="p-2 border border-secondary border-top-0 rounded-bottom">
+                                                        <h6 class="mb-0" th:text="${item}">Item Name</h6>
+                                                    </div>
+                                                </div>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+
+                            <div th:each="cat,iterStat : ${categorizedCommodities}"
+                                 th:id="'tab-' + ${iterStat.index}"
+                                 th:class="'tab-pane fade'"
+                                 role="tabpanel">
+                                <div class="row g-4">
                                     <div th:each="item : ${cat.value}" class="col-6 col-lg-2">
-                                        <div class="rounded position-relative fruite-item text-center">
+                                        <div class="rounded position-relative fruite-item text-center"
+                                             style="cursor:pointer"
+                                             th:attr="data-name=${item}"
+                                             onclick="openStatePopup(this)">
                                             <div class="fruite-img">
                                                 <img th:src="@{'img/agroLive.png'}" class="img-fluid rounded-top" alt="" />
                                             </div>
@@ -166,123 +205,102 @@
                                     </div>
                                 </div>
                             </div>
-                        </div>
-                    </div>
 
-                    <div th:each="cat,iterStat : ${categorizedCommodities}"
-                         th:id="'tab-' + ${iterStat.index}"
-                         th:class="'tab-pane fade'"
-                         role="tabpanel">
-                        <div class="row g-4">
-                            <div th:each="item : ${cat.value}" class="col-6 col-lg-2">
-                                <div class="rounded position-relative fruite-item text-center">
-                                    <div class="fruite-img">
-                                        <img th:src="@{'img/agroLive.png'}" class="img-fluid rounded-top" alt="" />
-                                    </div>
-                                    <div class="p-2 border border-secondary border-top-0 rounded-bottom">
-                                        <h6 class="mb-0" th:text="${item}">Item Name</h6>
-                                    </div>
-                                </div>
-                            </div>
                         </div>
+                        <!-- End tab-content -->
+
                     </div>
                 </div>
+
             </div>
         </div>
     </div>
-    <div class="container-fluid footer bg-dark py-4">
+    <!-- End Content Wrapper -->
+
+    <!-- Footer -->
+    <div class="container-fluid copyright bg-dark py-4 footer">
         <div class="container">
             <div class="row">
                 <div class="col-md-6 text-center text-md-start mb-3 mb-md-0">
                     <span class="text-light">
-                        <a href="#"><i class="fas fa-copyright text-light me-2"></i>Agrolive</a>, All rights reserved.
+                        <a href="#"><i class="fas fa-copyright text-light me-2"></i>Agrolive</a>, All right reserved.
                     </span>
                 </div>
-                <!-- <div class="col-md-6 my-auto text-center text-md-end text-white">
-                    Designed By <a class="border-bottom" href="https://htmlcodex.com">HTML Codex</a>
-                    Distributed By <a class="border-bottom" href="https://themewagon.com">ThemeWagon</a>
-                </div> -->
             </div>
         </div>
     </div>
+
+    <!-- Back to Top -->
     <a href="#" class="btn btn-primary border-3 border-primary rounded-circle back-to-top"><i class="fa fa-arrow-up"></i></a>
 
-
-<!-- State Popup Modal -->
-<div class="modal fade" id="stateModal" tabindex="-1">
-    <div class="modal-dialog modal-dialog-centered">
-        <div class="modal-content">
-            <div class="modal-header">
-                <h5 class="modal-title" id="modalCommodityName"></h5>
-                <button type="button" class="btn-close" data-bs-dismiss="modal"></button>
-            </div>
-            <div class="modal-body">
-                <ul id="stateList" class="list-group"></ul>
+    <!-- State Popup Modal -->
+    <div class="modal fade" id="stateModal" tabindex="-1">
+        <div class="modal-dialog modal-xl modal-dialog-centered modal-dialog-scrollable">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h4 class="modal-title fw-bold" id="modalCommodityName"></h4>
+                    <button type="button" class="btn-close" data-bs-dismiss="modal"></button>
+                </div>
+                <div class="modal-body">
+                    <div id="stateList" class="d-flex flex-wrap gap-3"></div>
+                </div>
             </div>
         </div>
     </div>
-</div>
 
-
+    <!-- Scripts -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.4/jquery.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0/dist/js/bootstrap.bundle.min.js"></script>
     <script src="lib/easing/easing.min.js"></script>
     <script src="lib/waypoints/waypoints.min.js"></script>
     <script src="lib/lightbox/js/lightbox.min.js"></script>
     <script src="lib/owlcarousel/owl.carousel.min.js"></script>
-
     <script src="js/main.js"></script>
 
     <script>
-        document.getElementById("productSearch").addEventListener("keyup", function () {
-            const searchValue = this.value.toLowerCase().trim();
-            // Select both .fruite-item and the div that contains the column class
-            const productColumns = document.querySelectorAll(".tab-content .row > div");
-            
-            productColumns.forEach(columnDiv => {
-                // Find the card inside the column
-                const card = columnDiv.querySelector(".fruite-item");
+      document.getElementById("productSearch").addEventListener("keyup", function () {
+        const searchValue = this.value.toLowerCase().trim();
 
-                if (card) {
-                    // Check if the card content (h6) matches the search value
-                    const productName = card.querySelector("h6").textContent.toLowerCase();
-                    if (productName.includes(searchValue)) {
-                        columnDiv.style.display = "block";
-                    } else {
-                        columnDiv.style.display = "none";
-                    }
-                }
-            });
+        // select all fruite-item cards
+        const productCards = document.querySelectorAll(".tab-content .fruite-item");
+
+        productCards.forEach(card => {
+            const productName = card.querySelector("h6").textContent.toLowerCase();
+            // show/hide the parent column of this card
+            const parentCol = card.closest(".col-6, .col-lg-2");
+            if (parentCol) {
+                parentCol.style.display = productName.includes(searchValue) ? "block" : "none";
+            }
         });
+    });
 
+        function openStatePopup(element) {
+            const commodityName = element.dataset.name;
+            document.getElementById("modalCommodityName").textContent = commodityName;
+
+            fetch("/api/states/" + commodityName)
+                .then(res => res.json())
+                .then(states => {
+                    const container = document.getElementById("stateList");
+                    container.innerHTML = "";
+
+                    states.forEach(state => {
+                        const btn = document.createElement("button");
+                        btn.className = "btn btn-outline-primary btn-lg px-4 py-3";
+                        btn.textContent = state;
+                        btn.onclick = () => {
+                            const url = `/allCommodities?commodity=${encodeURIComponent(commodityName)}&state=${encodeURIComponent(state)}`;
+                            window.location.href = url;
+                        };
+                        container.appendChild(btn);
+                    });
+
+                    new bootstrap.Modal(document.getElementById("stateModal")).show();
+                })
+                .catch(err => console.error(err));
+        }
     </script>
 
-<script>
-    function openStatePopup(element) {
-    const commodityName = element.dataset.name;
-    document.getElementById("modalCommodityName").textContent = commodityName;
-
-    const API_URL = "/api/states/" + commodityName; // <-- backend API endpoint
-
-    fetch(API_URL)
-        .then(res => res.json())
-        .then(states => {
-            const list = document.getElementById("stateList");
-            list.innerHTML = ""; 
-
-            states.forEach(state => {
-                const li = document.createElement("li");
-                li.className = "list-group-item";
-                li.textContent = state;
-                list.appendChild(li);
-            });
-
-            const modal = new bootstrap.Modal(document.getElementById('stateModal'));
-            modal.show();
-        })
-        .catch(err => console.error("Error fetching states:", err));
-}
-
-</script>
+</div>
 </body>
 </html>
