--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -51,7 +51,7 @@
             <div class="container px-0">
                 <nav class="navbar navbar-light bg-white navbar-expand-xl">
                     
-                    <a href="index.html" class="navbar-brand"><h1 class="text-primary display-6">AgroLive</h1></a>
+                    <a th:href="@{/index}" class="navbar-brand"><h1 class="text-primary display-6">AgroLive</h1></a>
                     <button class="navbar-toggler py-2 px-3" type="button" data-bs-toggle="collapse" data-bs-target="#navbarCollapse">
                         <span class="fa fa-bars text-primary"></span>
                     </button>
@@ -61,13 +61,10 @@
                             <a href="#" class="nav-item nav-link">About</a>
                             <a th:href="@{/market}" class="nav-item nav-link">Market</a>
                             <a th:href="@{/login}" class="nav-item nav-link">Login</a>
-                            <a href="contact.html" class="nav-item nav-link">Contact</a>
+                            <a th:href="@{/contact}" class="nav-item nav-link">Contact</a>
                         </div>
                         <div class="d-flex m-3 me-0">
-                            <a href="#" class="position-relative me-4 my-auto">
-                                <i class="fa fa-shopping-bag fa-2x"></i>
-                                <span class="position-absolute bg-secondary rounded-circle d-flex align-items-center justify-content-center text-dark px-1" style="top: -5px; left: 15px; height: 20px; min-width: 20px;">3</span>
-                            </a>
+                            
                             <a th:href="@{/register}" class="my-auto">
                                 <i class="fas fa-user fa-2x"></i>
                             </a>
