--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -87,7 +87,7 @@
                             <a href="#" class="nav-item nav-link">About</a>
                             <a th:href="@{/market}" class="nav-item nav-link">Market</a>
                             <a th:href="@{/login}" class="nav-item nav-link active">Login</a>
-                            <a href="contact.html" class="nav-item nav-link">Contact</a>
+                            <a th:href="@{/contact}" class="nav-item nav-link">Contact</a>
                         </div>
           <div class="d-flex m-3 me-0">
             <a th:href="@{/login}" class="my-auto">
